# metrx

./: CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: continuous_integration.yml
examples/: example.py  example_particle_data.py  example_time_series_data.py
metriX/: __init__.py  distance_measures.py  statistical_measures.py  utils.py
metrix/: statistical_measures.py  utils.py
metrx/: distance_measures.py  statistical_measures.py
tests/: test_measures.py
tests/test_datasets/: CosineDistance.npz  DiscreteFrechetDistance.npz  DynamicTimeWarping.npz  EuclideanDistance.npz  FrechetInceptionDistance.npz  GromovWassersteinDistance.npz  MahalanobisDistance.npz  MaximumMeanDiscrepancy.npz  MinkowskiDistance.npz  RelativeEntropy.npz  SinkhornDistance.npz  SquaredEuclideanDistance.npz  SquaredMahalanobisDistance.npz  WassersteinDistance.npz  data.npz
